# mcp-google-sheets

./: README.md  pyproject.toml
src/mcp_google_sheets/: server.py
