[project]
name = "mcp-google-sheets"
version = "0.1.1"
description = "This MCP server integrates with your Google Drive and Google Sheets, to enable creating and modifying spreadsheets. (Forked with Gemini API schema fix)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.8.0",
    "google-auth>=2.28.1",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.117.0",
]
[[project.authors]]
name = "Xing Wu"
email = "xingwu.cs@gmail.com"

[project.urls]
"Homepage" = "https://github.com/SunCreation/mcp-google-sheets-1"
"Bug Tracker" = "https://github.com/SunCreation/mcp-google-sheets-1/issues"
"Repository" = "https://github.com/SunCreation/mcp-google-sheets-1.git"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

# Static version - dynamic versioning removed for fork

[project.scripts]
mcp-google-sheets = "mcp_google_sheets:main"
